--- a/The Math/ChartDetailView.xib
+++ b/The Math/ChartDetailView.xib
@@ -412,7 +412,7 @@
                 <outlet property="moodMessageBottomConstraint" destination="XeQ-jG-qzv" id="iGd-K3-ILL"/>
                 <outlet property="moodMessageTopConstraint" destination="g4a-si-sPu" id="8c5-kY-1Vv"/>
                 <outlet property="noteLabel" destination="WAj-Rm-Xrb" id="l1d-Mf-BfA"/>
-                <outlet property="progressView" destination="pLz-gx-ZOP" id="vhv-Hz-gam"/>
+                <outlet property="progressView" destination="pLz-gx-ZOP" id="p4K-pU-Ubw"/>
                 <outlet property="timeLabel" destination="kX9-B7-qyn" id="8k5-m3-WTF"/>
             </connections>
             <point key="canvasLocation" x="221" y="169"/>
