copy change for Damian on Mood onboarding slide

--- a/The Math/OnboardingMoodView.xib
+++ b/The Math/OnboardingMoodView.xib
@@ -21,7 +21,7 @@
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood by grabbing the blue button. The better your mood, the further up the screen you move your finger." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record your mood by holding the blue button. The better your mood, the further up the screen you move your finger." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kow-pK-2tn">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="300" id="YM3-3J-Edb">
